--- a/website/index.html
+++ b/website/index.html
@@ -96,6 +96,73 @@
   </style>
 </head>
 <body>
+
+  
+  <!DOCTYPE HTML>
+  <html>
+  <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content= "width=device-width, initial-scale=1">
+  <title>Untitled Document</title>
+  <style>
+  form,ul{margin:0;padding:0;}
+  .nav ul{list-style:none;}
+  .nav ul a{color:#999;text-decoration:none;}
+  .nav {
+    background-color: white;
+    color: black;
+    padding-top: 1em;
+    display:flex;
+    flex-wrap:wrap;
+    align-items:center;
+  }
+  .login{margin-left:auto;display:flex;}
+  .login input,
+  .login a,
+  .login button{margin-left:10px;}
+  .nav ul{display:flex;text-transform:uppercase;margin:1em 0 1em 1em;}
+  .nav ul a{margin-left:15px;}
+  .login button{
+    -webkit-appearance:none;
+    background:#000;
+    color:#fff;
+    padding:5px 10px;
+    border-radius:10px;
+    border:none;
+  }
+  .login form{display:flex;flex-wrap:wrap;align-items:center;}
+  .login a{padding:5px 2px;text-decoration:none;color:#000;}
+  .login input{background:#eee;color:#333;border:none;padding:5px;}
+  
+  </style>
+  </head>
+  
+  <body>
+  <header>
+    <nav class="nav"> <a class="logo" href="#"> <img src="" alt="logo"> </a>
+      <ul>
+        <li><a href="index.php">Home</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">About me</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="login">
+        <form action="includes/login.inc.php" method="post">
+          <input type="text" name="mailuid" placeholder="Username or Email...">
+          <input type="password" name="pwd" placeholder="Password...">
+          <button type="submit" name="login-submit">Login</button>
+        </form>
+        <a href="signup.php">Signup</a>
+        <form action="includes/logout.inc.php" method="post">
+          <button type="submit" name="logout-submit">Logout</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  </body>
+  </html>
+
+
   <div class="video-background">
     <video autoplay muted loop id="bg-video">
       <source src="melo1.mp4" type="video/mp4">
@@ -106,12 +173,18 @@
     <div class="content">
       <!-- Add the logo image -->
       <img src="logo2.jpeg" alt="Mokuru Logo" class="logo">
-      <h1>Welcome to Mokuru</h1>
-      <p>This is an example of a webpage with a video background.</p>
-      <button class="go-to-calculate-button transparent-button" onclick="scrollToCalculator()">Go to Calculate</button>
+      <h1>Welcome to Mukuru.2.0</h1>
+      <p>Easy   Convenient Simple</p>
+      <button class="go-to-calculate-button transparent-button" onclick="scrollToCalculator()">Go to Calculator</button>
     </div>
 
-  <!-- Rest of your code -->
+  
+
+  <body>
+    <a href="login.html" class="login-link">Login</a>
+   
+  </body>
+  
 
   <script>
     function scrollToCalculator() {
