--- a/website/index.html
+++ b/website/index.html
@@ -55,50 +55,88 @@
     }
 
     /* Button style */
-    .go-to-calculate-button {
-      background-color: #d36e10; /* Changed to an orange color */
+    .go-to-calculate-button,
+    .signup-button,
+    .login-button {
+      background-color: #ee9038; /* Changed to an orange color */
       color: white;
       border: none;
       padding: 10px 20px;
-      border-radius: 4px;
+      border-radius: 25px; /* Increased border-radius for a more rounded shape */
       cursor: pointer;
       margin-top: 20px;
+      transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
     }
-    /* Add this style to your existing CSS */
-.transparent-button {
-  background-color: transparent;
-  color: white;
-  border: 2px solid white; /* Add a border for visibility */
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 20px;
-  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
-}
 
-.transparent-button:hover {
-  background-color: white;
-  color: #030507;
-  border-color: transparent;
-}
+    .transparent-button,
+    .signup-button,
+    .login-button {
+      background-color: transparent;
+      color: white;
+      border: 2px solid white; /* Add a border for visibility */
+      padding: 10px 20px;
+      border-radius: 25px; /* Increased border-radius for a more rounded shape */
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+    }
 
+    .transparent-button:hover,
+    .signup-button:hover,
+    .login-button:hover {
+      background-color: white;
+      color: #030507;
+      border-color: transparent;
+    }
 
     /* Updated button hover effect */
-    .go-to-calculate-button:hover {
+    .go-to-calculate-button:hover,
+    .signup-button:hover,
+    .login-button:hover {
       background-color: #e57e21; /* Lighter shade on hover */
     }
+    
     .logo {
       max-width: 100px; /* Adjust the width as needed */
       display: inline-block;
       vertical-align: middle;
       margin-right: 10px; /* Add spacing between logo and text */
     }
+
+    /* Top right links style */
+    .top-right-links {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      display: flex;
+      gap: 20px;
+    }
+    .video-transition {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      background-color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s ease-in-out;
+    }
+
+    #video-transition {
+      max-width: 100%;
+      max-height: 100%;
+    }
   </style>
 </head>
 <body>
   <div class="video-background">
     <video autoplay muted loop id="bg-video">
-      <source src="melo1.mp4" type="video/mp4">
+      <source src="melo2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -106,23 +144,48 @@
     <div class="content">
       <!-- Add the logo image -->
       <img src="logo2.jpeg" alt="Mokuru Logo" class="logo">
-      <h1>Welcome to Mokuru</h1>
-      <p>This is an example of a webpage with a video background.</p>
-      <button class="go-to-calculate-button transparent-button" onclick="scrollToCalculator()">Go to Calculate</button>
+      <h1>Welcome to Mokuru 2.0</h1>
+      <p> Unlock Seamless Remittance: Your Journey, Our Calculator</p>
+      <!-- Top right links -->
+      <div class="top-right-links">
+        <button class="signup-button transparent-button">Sign Up</button>
+        <button class="login-button transparent-button">Login</button>
+      </div>
+      <button class="go-to-calculate-button transparent-button" onclick="scrollToCalculator()">Go to Calculator</button>
+      <div class="video-transition" id="video-transition">
+        <video autoplay muted id="video-transition-video">
+          <source src="transition.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
     </div>
+    <!-- Rest of your code -->
 
-  <!-- Rest of your code -->
+    <script>
 
-  <script>
-    function scrollToCalculator() {
-      const calculatorSection = document.querySelector('.calculator');
-      if (calculatorSection) {
-        calculatorSection.scrollIntoView({ behavior: 'smooth' });
+      function scrollToCalculator() {
+        const calculatorSection = document.querySelector('.calculator');
+        if (calculatorSection) {
+          calculatorSection.scrollIntoView({ behavior: 'smooth' });
+        }
       }
+      
+    function scrollToCalculator() {
+      // Show the video transition
+      const videoTransition = document.getElementById('video-transition');
+      videoTransition.style.opacity = '1';
+      videoTransition.style.pointerEvents = 'auto';
+
+      // Play the video
+      const videoElement = document.getElementById('video-transition-video');
+      videoElement.play();
+
+      // After the video is done playing, redirect to the calculator page
+      videoElement.addEventListener('ended', () => {
+        window.location.href = 'http://127.0.0.1:5500/website/caculator.html'; // Replace with your calculator page URL
+      });
     }
-  </script>
+    </script>
+  </div>
 </body>
 </html>
-
-
-
