--- a/website/caculator.html
+++ b/website/caculator.html
@@ -13,6 +13,11 @@
     Your browser does not support the video tag.
   </video>
 
+  <!-- Logo container at the top-right corner -->
+  <div class="logo-container">
+    <img src="logo2.jpeg" alt="Mukuru Logo" class="logo">
+  </div>
+
   <div class="calculator">
     <h1>Mukuru</h1>
     <div class="inputs">
@@ -33,12 +38,10 @@
         </select>
         
        <!-- Add this block below the 'Product Type' dropdown -->
-<!-- Add this block below the 'Product Type' dropdown -->
-<div id="exchangeRateFeeContainer">
-    <p><span id="exchangeRate"></span></p>
-    <p> <span id="fee"></span></p>
-  </div>
-  
+       <div id="exchangeRateFeeContainer">
+           <p><span id="exchangeRate"></span></p>
+           <p> <span id="fee"></span></p>
+       </div>
   
         <p id="exchangeRateFee"></p>
         
